[metadata]
name = pyal
authors = Summer Xia
author_email = tianxia0209@gmail.com
version = 1.0.0
description = Python does not have some useful or important data structures, like linked list, tree map, just like STL in C++. This library, PYthon Algorithm Library (pyal), aims to provide a python version substitue of STL in C++.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SummerRainET2008/PYthon_Algorithms_Library
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
