[metadata]
name = Python-Algorithm-pyal
authors = Summer Xia
author_email = tianxia0209@gmail.com
version = 1.1.8
description = PYthon Algorithm Library (pyal) targets at providing a python version substitue of STL in C++, such as linked list, tree map, and other data structures and popular algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SummerRainET2008/PYthon_Algorithms_Library
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
